--- a/leo LPW2/formulario.html
+++ b/leo LPW2/formulario.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Formulário Simples - Front-End</title>
 </head>
 <body>
-    
+  <h2>Cadastro de Usuário</h2>
+  <form id="meuFormulario">
+    <label>Nome:</label>
+    <input type="text" id="nome"><br><br>
+
+    <label>Email:</label>
+    <input type="text" id="email"><br><br>
+
+    <label>Telefone:</label>
+    <input type="text" id="telefone"><br><br>
+
+    <button type="submit">Enviar</button>
+  </form>
 </body>
 </html>
