--- a/leo LPW2/formulario.html
+++ b/leo LPW2/formulario.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Formulário Simples - Front-End</title>
+  <script src="script.js" defer></script>
 </head>
 <body>
   <h2>Cadastro de Usuário</h2>
